# aws-cqrs-test

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CONSISTENCY_REPORT.md  LICENSE  Makefile  README.md  codecov.yml  fix_test_types.py  pyproject.toml  pytest.ini  scripts.py
.cursor/rules/architecture/: architecture-guide.mdc  architecture-overview.mdc  aws-localstack.mdc  aws-services.mdc  file-navigation.mdc  quick-commands.mdc  testing-guide.mdc  troubleshooting.mdc
.cursor/rules/aws/: aws-dynamodb.mdc  aws-lambda.mdc  aws-settings.mdc
.cursor/rules/coding/: always-run-rules.mdc  api-endpoints.mdc  clarification-requirement.mdc  common-tasks.mdc  development-workflow.mdc  testing-guide.mdc
.cursor/rules/database/: data-access-patterns.mdc  dynamodb-layout.mdc  dynamodb-queries.mdc  localstack-development.mdc
.cursor/rules/docker/: containerization-rules.mdc  docker-compose.mdc
.cursor/rules/python/: coding-standards.mdc  general-python-development.mdc  project-specific-testing-framework.mdc  python-dependency-management-with-poetry.mdc  python-general-rule.mdc  python-testing.mdc
.github/: .git-generateCommitMessage.prompt.md
.github/workflows/: ci.yml  lambda-tests.yml
docs/: README.md
docs/api/: api-changes-v3.md  api-changes-v4.1.md  api-changes-v4.2.md  api-changes-v4.3.md  api-changes-v4.md
docs/architecture/: CQRS_SUCCESS.md  cqrs-hexagonal-design-v4.md  cqrs-hexagonal-design.md  ecs-migration-guide.md  query_service_requirements.md  query_service_requirements_v2.md
docs/deployment/: aws-console-deployment-guide.md  deployment-env-vars.md  docker_deployment_test_report.md  ecs-deployment.md  ecs-gui-deployment-steps.md  environment-setup.md  gui-deployment.md  iam-quick-setup.md  iam-roles-setup-guide.md  lambda-docker-deployment.md  lambda-gui-deployment-steps.md
docs/development/: ci-precommit-consistency.md  pre-commit-ci-consistency.md
docs/guides/: CODECOV_SETUP.md  FINAL_USAGE_GUIDE.md  MANUAL_QUERY_GUIDE.md  README_QUERY_TOOLS.md
docs/migration/: DOCUMENTATION_UPDATE_V4.2.md  migration-v3-implementation.md  migration_v3.md  table-name-migration.md
docs/poetry_update/: CLEANUP_SUMMARY.md  POETRY_VERIFICATION_REPORT.md
docs/project/: PROJECT_SUMMARY.md  ROOT_DIRECTORY_MIGRATION.md  SUCCESS_SUMMARY.md
docs/testing/: AWS_CLOUDSHELL_INTEGRATION_GUIDE.md  CLOUDSHELL_COMMANDS.md  CURL_QUICK_REFERENCE.md  QUICK_TEST_GUIDE.md  ROOT_DIRECTORY_TESTS.md  SIMPLE_CURL_TESTS.md  TESTING_GUIDE.md  VERIFICATION_GUIDE.md
query-service/: .coverage  .gitignore  LAMBDA_TESTING_GUIDE.md  README.md  coverage.json  coverage.xml  deploy_docker.sh  docker-compose.yml  lambda-test-templates.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_docker_deployment.sh  test_ecs_architecture.py  test_lambda.py  test_verification.py  validate_improvements.py
query-service/eks-handler/: Dockerfile  main.py  requirements.txt
query-service/eks_handler/: Dockerfile  __init__.py  main.py  requirements.txt
query-service/infra/api-gateway/: internal-api.json
query-service/infra/ecs/: service-definition.json  task-definition.json
query-service/infra/localstack/: build_lambda.sh  setup.sh  setup_docker.sh
query-service/lambdas/: .lambdaignore  __init__.py  deploy_docker_lambdas.sh  docker-compose.lambda.yml
query-service/lambdas/query_lambda/: Dockerfile  __init__.py  app.py  requirements-test.txt  requirements.txt  run_tests.sh  test_app.py
query-service/lambdas/query_result_lambda/: Dockerfile  README.md  app.py  pytest.ini  requirements-test.txt  requirements.txt  test_app.py
query-service/lambdas/stream_processor_lambda/: Dockerfile  __init__.py  app.py  requirements.txt  test_app.py
query-service/scripts/: deploy-ecs.sh  start-dev.sh
query-service/test-events/: apigateway-user-query.json  dynamodb-stream-ios-insert.json  eventbridge-scheduled.json
query-service/tests/: README.md  __init__.py  conftest.py  requirements-test.txt  test_eks_handler.py  test_integration.py
query-service/tests/test_lambdas/: conftest.py  test_query_lambda.py  test_query_result_lambda.py  test_stream_processor_lambda.py
scripts/: README.md  check_consistency.py  deploy_api_gateway_proxy.sh  fix_api_gateway.sh  fix_scripts.sh  restart_services.sh  setup_env.sh  test_full_flow.sh
scripts/ci-cd/: simple_test.sh
scripts/deployment/: cloudshell_quick_start.sh  deploy_api_gateway_proxy.sh  restart_services.sh
scripts/development/: setup_env.sh  simulate_writes.py
scripts/infrastructure/: fix_api_gateway.sh  fix_scripts.sh
scripts/queries/: README.md  api_gateway_helper.py  fixed_query.py  fixed_query.sh  inspect_tables.sh  manual_query.ps1  query_services.ps1  simple_query.ps1  simple_query.sh  table_inspector.py  test_query.sh
scripts/testing/: check_tables.py  populate_test_data.py  quick_test.ps1  quick_test.sh  run-all-tests.sh  run-integration-tests.sh  run-unit-tests.sh  run_tests.ps1  test_coverage.sh  test_full_flow.sh
scripts/verification/: verify_system.bat  verify_system.ps1  verify_system.sh
