[tool.poetry]
name = "aws-cqrs-test"
version = "2.0.0"
description = "AWS CQRS + Hexagonal Architecture Notification System"
authors = ["Yonger0718 <tedg319@gmail.com>"]
readme = "README.md"
packages = [{include = "query_service", from = "query-service"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.26.137"
requests = "^2.32.3"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-forked = "^1.6.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"
types-requests = "^2.32.0.20250515"
bandit = "^1.8.0"
detect-secrets = "^1.5.0"
safety = "^3.2.0"
types-boto3 = "^1.0.2"
tomli = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-forked = "^1.6.0"
httpx = "^0.24.0"
moto = "^4.2.0"
awscli-local = "^0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["query-service/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=query-service/eks_handler",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=75"
]
markers = [
    "unit: marks tests as unit tests (fast, no external dependencies)",
    "integration: marks tests as integration tests (require external services)",
    "slow: marks tests as slow running"
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_first_party = ["eks_handler", "lambdas"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "moto.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["query-service/eks_handler"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except ImportError:",
    "except ModuleNotFoundError:"
]

[tool.bandit]
# Bandit 安全性檢查配置
exclude_dirs = ["tests", "test_*", "__pycache__", ".venv", "venv", ".mypy_cache"]
skips = ["B101"]  # 跳過 assert 使用檢查（測試中常見）
confidence = "medium"
severity = "medium"

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/*"]
